tests/syntax/good/testfile-impl-1.rs
struct S {
    x : i32,
    y : u32,
}


impl S {
    fn new() -> Self {
        Self {
            x : 0,
            y : 0,
        }
    }
}

fn main() {
    let s = 3;
}